# TTEA

./: .gitignore  README.md  pyproject.toml
configs/: platform.json
configs/experiments/: ablation_communication.json  ablation_evolution.json  ablation_top_level_objective.json  arc_challenge.json  asqa.json  jrc_acquis.json  miniwob.json  pubhealth.json  squad.json  swebench_lite.json  webarena.json
configs/paper/: revision_benchmark_suite.json
coummunicaiton/: setup.py
coummunicaiton/opencood/hypes_yaml/: yaml_utils.py
coummunicaiton/opencood/loss/: point_pillar_loss.py
coummunicaiton/opencood/models/: point_pillar_baseline_multiscale.py  point_pillar_baseline_multiscale_copeft.py  point_pillar_baseline_multiscale_copeft_deep.py  point_pillar_intermediate.py  point_pillar_intermediate_copeft.py
coummunicaiton/opencood/tools/: inference.py  inference_T2D.py  train.py  train_fine_tuning.py  train_utils.py
coummunicaiton/opencood/utils/: eval_utils.py  fine_tuning_utils.py
coummunicaiton/opencood/visualization/: feature_visualization.py  simple_vis.py
data/: README.md
data/datasets/arc_challenge/: manifest.json
data/datasets/asqa/: manifest.json
docs/: architecture.md  experiments.md
result/: ablation.json  knowledge_enhancement.json  software_engineering.json  translation.json  web_navigation.json
src/ttea/: __init__.py  cli.py  config.py  exceptions.py  runtime.py  types.py
src/ttea/agents/: __init__.py  (+3 more)
tests/: test_benchmarks.py  test_communication.py  test_config.py  test_metrics.py  test_objective.py  test_reasoning.py  test_runner.py
(+66 files in other folders)
