[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttea-platform"
version = "0.1.0"
description = "System-level multi-agent platform for TTEA-style experimentation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "accelerate>=0.31",
  "datasets>=2.19",
  "evaluate>=0.4",
  "langchain>=0.3",
  "langchain-community>=0.3",
  "langchain-core>=0.3",
  "numpy>=1.26",
  "rouge-score>=0.1.2",
  "sacrebleu>=2.4",
  "safetensors>=0.4",
  "sentencepiece>=0.2",
  "torch>=2.3",
  "transformers>=4.41"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
integration = [
  "browsergym-core>=0.13",
  "browsergym-miniwob>=0.13",
  "gymnasium>=0.29",
  "mauve-text>=0.4",
  "peft>=0.11"
]
web = [
  "playwright>=1.45"
]

[project.scripts]
ttea = "ttea.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
